force-app/main/default/objects/WorkOrder/fields/Actual_work_duration__c.field-meta.xml
<CustomField>
    <fullName>Actual_work_duration__c</fullName>
    <description>Counts together the actual work times from the related Service Appointment(s). In hours.</description>
    <label>Actual work duration OLD</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>