force-app/main/default/objects/WorkOrder/fields/Combination_name__c.field-meta.xml
<CustomField>
    <fullName>Combination_name__c</fullName>
    <description>Used to provide more details to WO based configuration product selection in Reclamation/Warranty Case creation from Account.</description>
    <formula>IF(
    ISBLANK(Reclamation_Opportunity__c),
    WorkOrderNumber &amp; &quot; (&quot; &amp;  TEXT(TIMEVALUE(CreatedDate)) &amp; &quot; &quot; &amp; TEXT(DATEVALUE(CreatedDate)) &amp; &quot;) Oppo: &quot; &amp;  Opportunity__r.Name,
    WorkOrderNumber &amp; &quot; (&quot; &amp;  TEXT(TIMEVALUE(CreatedDate)) &amp; &quot; &quot; &amp; TEXT(DATEVALUE(CreatedDate)) &amp; &quot;) Oppo: &quot; &amp;  Reclamation_Opportunity__r.Name
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combination name OLD</label>
    <type>Text</type>
</CustomField>