force-app/main/default/objects/WorkOrder/fields/Completed_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Completed_Line_Items__c</fullName>
    <description>Number of completed WOLIs. Used e.g. in Delivery Batch completion figure calculation.</description>
    <label>Completed Line Items</label>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Status</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>