force-app/main/default/objects/WorkOrder/fields/Configuration_Plan__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Configuration Plan OLD</label>
    <referenceTo>Configuration__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>