force-app/main/default/objects/WorkOrder/fields/Count_Installed_Reclamation_WOLIs__c.field-meta.xml
<CustomField>
    <fullName>Count_Installed_Reclamation_WOLIs__c</fullName>
    <description>Count of reclamation WOLIs that have been already installed/completed.</description>
    <label>Count Installed Reclamation WOLIs OLD</label>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Is_Reclamation__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Status</field>
        <operation>equals</operation>
        <value>Completed, Closed, Cannot Complete, Canceled</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>