force-app/main/default/objects/WorkOrder/fields/Count_of_all_Reclamation_WOLIs__c.field-meta.xml
<CustomField>
    <fullName>Count_of_all_Reclamation_WOLIs__c</fullName>
    <description>All Reclamation WOLIs irrespective of their statuses.</description>
    <label>Count of all Reclamation WOLIs OLD</label>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Is_Reclamation__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>