force-app/main/default/objects/WorkOrder/fields/CountStoppedWorkOrderLineITems__c.field-meta.xml
<CustomField>
    <fullName>CountStoppedWorkOrderLineITems__c</fullName>
    <label>Number of Stopped WorkOrderLineITems</label>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Status</field>
        <operation>equals</operation>
        <value>Cannot Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>