force-app/main/default/objects/WorkOrder/fields/Delivery_Batch__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Delivery Batch for the Project work&apos;s Work Order.</description>
    <label>Delivery Batch OLD</label>
    <referenceTo>Delivery_Batch__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>