force-app/main/default/objects/WorkOrder/fields/Hard_Reserved_Date__c.field-meta.xml
<CustomField>
    <fullName>Hard_Reserved_Date__c</fullName>
    <description>&quot;Scheduled Start&quot; field information from Service Appointment.</description>
    <label>Hard Reserved Date</label>
    <type>DateTime</type>
</CustomField>