force-app/main/default/objects/WorkOrder/fields/IsIntegrationData__c.field-meta.xml
<CustomField>
    <fullName>IsIntegrationData__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is set only when the WO is generated by the integration. Is used to determine the correct line item count (exclude the original integration created WO from calculation).</description>
    <label>IsIntegrationData</label>
    <type>Checkbox</type>
</CustomField>