force-app/main/default/objects/WorkOrder/fields/LUM_Reschedule_Count__c.field-meta.xml
<CustomField>
    <fullName>LUM_Reschedule_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The amount of times this work order was rescheduled.</description>
    <inlineHelpText>The amount of times this work order was rescheduled.</inlineHelpText>
    <label>(Re)schedule Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>