force-app/main/default/objects/WorkOrder/fields/Reclamation_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Reclamation_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the reclamation oppo. The soft and hard installation times are updated by another flow (sa - on update after save) to the reclamation oppo.</description>
    <label>Reclamation Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Work Orders (Reclamation Opportunity)</relationshipLabel>
    <relationshipName>Reclamation_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>