force-app/main/default/objects/WorkOrder/fields/SalesToriUniqueKey__c.field-meta.xml
<CustomField>
    <fullName>SalesToriUniqueKey__c</fullName>
    <externalId>true</externalId>
    <label>SalesToriUniqueKey</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>