force-app/main/default/objects/WorkOrder/fields/Soft_Reserved_Date__c.field-meta.xml
<CustomField>
    <fullName>Soft_Reserved_Date__c</fullName>
    <description>&quot;Arrival Window Start&quot; value from the Service Appointment.</description>
    <label>Soft Reserved Date</label>
    <type>DateTime</type>
</CustomField>