force-app/main/default/objects/WorkOrder/fields/Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Special_Instructions__c</fullName>
    <description>Shows the Special Instructions from Opportunity.</description>
    <formula>Opportunity__r.Special_Instructions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Special Instructions OLD</label>
    <type>Text</type>
</CustomField>