force-app/main/default/objects/WorkOrder/fields/Total_Duration__c.field-meta.xml
<CustomField>
    <fullName>Total_Duration__c</fullName>
    <description>Rollup Summary of Work Order Line Item (estimated) Duration.

Considers only items that are still to be done i.e. in &quot;new and in progress&quot; status.</description>
    <label>Total Duration</label>
    <summarizedField>WorkOrderLineItem.Duration</summarizedField>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Status</field>
        <operation>equals</operation>
        <value>New, In Progress</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>