force-app/main/default/objects/WorkOrder/listViews/All_WorkOrders.listView-meta.xml
<ListView>
    <fullName>All_WorkOrders</fullName>
    <columns>Name</columns>
    <columns>ProjectNumber__c</columns>
    <columns>OfferNumber__c</columns>
    <columns>Subject</columns>
    <columns>STREET</columns>
    <columns>Account</columns>
    <columns>Priority</columns>
    <columns>Status</columns>
    <columns>CreatedDate</columns>
    <columns>DeliveryAddress__Street__s</columns>
    <columns>EndDate</columns>
    <columns>StartDate</columns>
    <columns>ServiceTerritory</columns>
    <filterScope>Everything</filterScope>
    <label>All Work Orders</label>
</ListView>