force-app/main/default/objects/WorkOrder/listViews/New_Child_Work_Orders.listView-meta.xml
<ListView>
    <fullName>New_Child_Work_Orders</fullName>
    <columns>Name</columns>
    <columns>ServiceTerritory</columns>
    <columns>WorkType</columns>
    <columns>Subject</columns>
    <columns>Status</columns>
    <columns>Owner</columns>
    <columns>COUNTRY_CODE</columns>
    <columns>StatusCategory</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>ParentWorkOrder</field>
        <operation>notEqual</operation>
    </filters>
    <label>New Child Work Orders</label>
    <sharedTo>
        <group>Admins</group>
    </sharedTo>
</ListView>